feat: games crud + declaration and approval